@@ -14,6 +14,7 @@ Version 1.0.6 to be released
 - Bug #338: Undefined variables in CTimestamp.php (Qiang)
 - Bug: Syntax errors in autoloaded classes are not reported (Qiang)
 - New #36: Added column declarations to the generated model class using yiic (Qiang)
+- New #231: Enhanced yiic shell model command to generate relations automatically (olafure, Qiang)
 - New #300: Added support for using a controller action to display application errors (Qiang)
 - New #304: Added flv mimeType to the mimeType array (Qiang)
 - New #315: Added CDbConnection.enableProfiling (Qiang)
@@ -21,6 +22,7 @@ Version 1.0.6 to be released
 - New #326: Yii::powered() will show Yii site in a new window (Qiang)
 - New #328: Make yiic to work with f-cgi (Qiang)
 - New: Enhanced the 'with' option in relational rules so that it also applies in eager loading (Qiang)
+- New: Enhanced yiic shell model command to generate all models for the whole database (olafure, Qiang)
 - New: Added support to allow using named scopes with update and delete methods (Qiang)
 - New: Refactored support for dynamic query options with relational AR (Qiang)
 - New: Added CDbCriteria::toArray() (Qiang)
